syntax = "proto3";
package grpc.geo_types;

// Geo Location PointZ representation
// https://mapscaping.com/latitude-x-or-y/
message GeoPointZ {
    // x (horizontal / east-west)
    // range: -180 - 180
    double x = 1;
    // y (vertical / north-south)
    // range: -90 - 90
    double y = 2;
    // z (altitude / height) in meters
    double z = 3;
}

// Geo Location LineStringZ representation
message GeoLineStringZ {
    // list of points
    repeated GeoPointZ points = 1;
}

// Geo Location GeoMultiPointZ representation
message GeoMultiPointZ {
    // list of points
    repeated GeoPointZ points = 1;
}

// Geo Location PolygonZ representation
message GeoPolygonZ {
    // rings
    repeated GeoLineStringZ rings = 1;
}
